# Nova

./: .env  .gitignore  LICENSE.md  README.md  app.py  config.py  crawler.py  crawler_manager.py  database.py  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  robots_parser.py  url_prioritizer.py
app/core/: config.py  monitoring.py
app/crawler/: crawler.py  manager.py  robots.py  sitemap.py  url_prioritizer.py
app/routes/: admin.py  api.py
app/search/: engine.py
app/storage/: database.py  metadata.py
docker/: Dockerfile
nova/app/: __init__.py
nova/app/core/: auth.py  config.py  monitoring.py
nova/app/crawler/: crawler.py  manager.py  robots.py  url_prioritizer.py
nova/app/routes/: admin.py  api.py
nova/app/search/: engine.py
nova/app/static/css/: main.css
nova/app/static/js/: main.js
nova/app/storage/: database.py
nova/app/templates/components/: pagination.html  search_box.html  search_results.html
nova/app/templates/layouts/: main.html
nova/app/templates/pages/: error.html  index.html  search.html
