
[tool.poetry]
name = "nova-search"
version = "1.0.0"
description = "Production-grade search engine"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
elasticsearch = "^7.15.0"
redis = "^3.5.3"
prometheus-client = "^0.11.0"
sentry-sdk = "^1.3.1"
structlog = "^21.1.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
beautifulsoup4 = "^4.9.3"
aiohttp = "^3.8.1"
motor = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
black = "^21.7b0"
isort = "^5.9.3"
mypy = "^0.910"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"